--- a/src/components/PostDate.astro
+++ b/src/components/PostDate.astro
@@ -8,10 +8,9 @@ type DateFormat = ThemeConfig['global']['dateFormat']
 interface Props {
   date: Date
   updatedDate?: Date
-  minutes: number
 }
 
-const { date, updatedDate, minutes } = Astro.props
+const { date, updatedDate } = Astro.props
 const { dateFormat: format } = themeConfig.global
 const isPost = isPostPage(Astro.url.pathname)
 const timeSpacingClass = isPost ? 'ml-1.75' : 'ml-1.5'
@@ -73,8 +72,3 @@ function formatDate(date: Date, format: DateFormat) {
     updated {formatDate(updatedDate, format)}
   </time>
 )}
-
-<!-- reading time -->
-<span class={timeSpacingClass}>
-  {minutes} min
-</span>
