--- a/src/pages/[...lang]/posts/[slug].astro
+++ b/src/pages/[...lang]/posts/[slug].astro
@@ -77,7 +77,7 @@ const { post, supportedLangs } = Astro.props
 const currentLang = getLangFromLocale(Astro.currentLocale)
 const slug = post.data.abbrlink || post.id
 const description = getPostDescription(post, 'meta')
-const { Content, headings, remarkPluginFrontmatter } = await render(post)
+const { Content, headings } = await render(post)
 ---
 
 <Layout
@@ -111,7 +111,6 @@ const { Content, headings, remarkPluginFrontmatter } = await render(post)
       <PostDate
         date={post.data.published}
         updatedDate={post.data.updated}
-        minutes={remarkPluginFrontmatter.minutes}
       />
     </div>
     <!-- TOC -->
