--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,10 +2,13 @@
 import { ui } from '@/i18n/ui'
 import { getPageInfo } from '@/utils/page'
 
-const { currentLang, isHome, isPost, isTag, isAbout, getLocalizedPath } = getPageInfo(Astro.url.pathname)
+const { currentLang, isHome, isPost, isTag, isAbout, isPoetry, getLocalizedPath } = getPageInfo(Astro.url.pathname)
 const currentUI = ui[currentLang as keyof typeof ui] ?? {}
 
 const isPostActive = isHome || isPost
+
+const isPoetryActive = isPoetry
+
 const isTagActive = isTag
 const isAboutActive = isAbout
 
@@ -20,6 +23,11 @@ const navItems = [
     href: '/',
     label: currentUI.posts,
     className: getNavItemClass(isPostActive),
+  },
+  {
+    href: '/poetry/',
+    label: currentUI.poetry,
+    className: getNavItemClass(isPoetryActive),
   },
   {
     href: '/tags/',
