--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,8 +2,12 @@
 import { themeConfig } from '@/config'
 import { getLangFromPath } from '@/i18n/lang'
 import { getLocalizedPath } from '@/i18n/path'
+import { ui } from '@/i18n/ui'
 
-const { author } = themeConfig.site
+const currentLang = getLangFromPath(Astro.url.pathname)
+
+const { author } = ui[currentLang] || themeConfig.site
+
 const { links, startYear } = themeConfig.footer
 
 const currentYear = new Date().getFullYear()
@@ -11,7 +15,7 @@ const year = Number(startYear) === currentYear
   ? startYear
   : `${startYear}-${currentYear}`
 
-const currentLang = getLangFromPath(Astro.url.pathname)
+
 const socialLinks = links.map(({ name, url }) => {
   const isRSS = url === '/atom.xml' || url === '/rss.xml'
   const isEmail = /^[\w.-]+@[\w.-]+\.[a-z]{2,}$/i.test(url)
