--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
 const showCopyRight = true
 ---
 
-<footer class="mt-10 mb-6 m-auto flex color-coolgray text-sm">
+<footer class="mt-10 mb-6 m-auto flex text-sm">
     {
         showCopyRight && (
             <a class="@hover:color-dark transition-colors duration-500" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
