--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,8 @@
 ---
-import Footer from '../components/Footer.astro';
-import Navigation from '../components/Navigation.astro';
-import '../styles/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro'; 
+import ListPosts from '../components/ListPosts.astro';
 ---
 
-
-<!doctype html>
-<html lang="zh-CN" class="dark">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="author" content="洋山芋" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-    <title>y3say</title>
-  </head>
-  <body class="font-sans text-gray-700 dark:text-gray-200 dark:bg-black">
-    <Navigation />
-    <slot />
-    <Footer client:load />
-  </body>
-</html>
+<BaseLayout>
+  <ListPosts />
+</BaseLayout>
