--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro'; 
-import ListPosts from '../components/ListPosts.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
+import PostList from '../components/PostList.astro'
 ---
 
 <BaseLayout>
-  <ListPosts />
+  <div>
+    <PostList />
+  </div>
 </BaseLayout>
