--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,9 +2,9 @@
 // src/components/Footer.astro
 ---
 
-<div class="mt-10 mb-6 prose m-auto flex justify-center animate-delay-1200!">
-  <span class="text-sm op50">
-    <a target="_blank" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" style="color:inherit" rel="noopener noreferrer">
+<div class="my-10 mx-7">
+  <span class="text-sm">
+    <a class="op70 hover:op100 transition-opacity" target="_blank" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" style="color:inherit" rel="noopener noreferrer">
       CC BY-NC-SA 4.0
     </a>
     2026 © 洋山芋
