--- a/src/components/ToggleTheme.astro
+++ b/src/components/ToggleTheme.astro
@@ -2,7 +2,7 @@
 // src/components/ToggleTheme.astro
 ---
 
-<a class="select-none cursor-pointer" title="Toggle Color Scheme" id="theme-toggle">
+<a class="select-none cursor-pointer lt-md:hidden opacity-60 hover:opacity-100 transition-opacity" title="Toggle Color Scheme" id="theme-toggle">
   <div class="i-ri-sun-line dark:i-ri-moon-line" />
 </a>
 
