--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import PostList from '../components/PostList.astro'
 ---
 
 <BaseLayout>
-  <div>
+  <div class="w-100vw flex">
     <PostList />
   </div>
 </BaseLayout>
