--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 // src/components/Footer.astro
 ---
 
-<div class="my-10 mx-7">
+<div class="mx-7 md:mx-auto md:max-w-3xl w-auto py-15 slide-enter">
   <span class="text-sm">
     <a class="op70 hover:op100 transition-opacity" target="_blank" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" style="color:inherit" rel="noopener noreferrer">
       CC BY-NC-SA 4.0
