--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,8 +3,6 @@ import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import BackToTop from '../components/BackToTop.astro'
 
-import Plum from '../components/Plum.astro';
-
 import '../styles/global.css';
 
 export interface Props {
@@ -25,22 +23,17 @@ const { title = 'y3say', description } = Astro.props
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <title>{title}</title>
     
-    
     <script>
       ;(function () {
         const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
-        const setting = localStorage.getItem('vueuse-color-scheme') || 'auto'
+        const setting = localStorage.getItem('theme') || 'auto'
         if (setting === 'dark' || (prefersDark && setting !== 'light'))
           document.documentElement.classList.toggle('dark', true)
       })()
     </script>
   </head>
 
-
-
-  
   <body class="font-sans text-gray-700 dark:text-gray-200 relative min-h-screen bg-white dark:bg-black">
-    <Plum />
     <Header />
     <main class="mx-7 md:mx-auto md:max-w-3xl w-auto pt-32 pb-10">
       <slot /> <!-- 页面内容插槽 -->
